@@ -25,7 +25,7 @@ pattern.0label={0}:
 none=none
 electrostaticPotential=Electrostatic Potential
 electronDensity=Electron Density
-isosurface=Isosurface
+surface=Surface
 view=View
 atomLabels=Atom Labels
 molecule=Molecule
